--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,24 @@
              xmlns:local="clr-namespace:Denisevich_MailSender"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/ShinyBlue/Theme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="Label">
+                <Setter Property="Foreground">
+                    <Setter.Value>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="{StaticResource NormalBrushGradient1}" Offset="0" />
+                            <GradientStop Color="{StaticResource NormalBrushGradient2}" Offset="0.41800001263618469" />
+                            <GradientStop Color="{StaticResource NormalBrushGradient3}" Offset="0.418" />
+                            <GradientStop Color="{StaticResource NormalBrushGradient4}" Offset="1" />
+                        </LinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
