--- a/App.xaml
+++ b/App.xaml
@@ -6,22 +6,33 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Themes/WhistlerBlue/Theme.xaml"/>
+                <ResourceDictionary Source="Themes/DavesGlossyControls/Theme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-
-            <Style TargetType="Label">
-                <Setter Property="Foreground">
+            
+            <Style TargetType="PasswordBox">
+                <Setter Property="Background">
+                    <Setter.Value>
+                        <LinearGradientBrush EndPoint="0.498,0.328" StartPoint="0.498,-0.672">
+                            <GradientStop Color="#FF3B3B3B"/>
+                            <GradientStop Color="#FF000000" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="Foreground" Value="#FFF"></Setter>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="Padding" Value="2"/>
+                <Setter Property="BorderBrush">
                     <Setter.Value>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="{StaticResource NormalBrushGradient1}" Offset="0" />
-                            <GradientStop Color="{StaticResource NormalBrushGradient2}" Offset="0.41800001263618469" />
-                            <GradientStop Color="{StaticResource NormalBrushGradient3}" Offset="0.418" />
-                            <GradientStop Color="{StaticResource NormalBrushGradient4}" Offset="1" />
+                            <GradientStop Color="#FFA3AEB9" Offset="0"/>
+                            <GradientStop Color="#FF8399A9" Offset="0.375"/>
+                            <GradientStop Color="#FF718597" Offset="0.375"/>
+                            <GradientStop Color="#FF617584" Offset="1"/>
                         </LinearGradientBrush>
                     </Setter.Value>
                 </Setter>
             </Style>
-            
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
